[update] delete pagination route in block
