# internal/handlers/block_handler.go
@@ -2,6 +2,7 @@ package handlers
 
 import (
 	"github.com/IKHINtech/sirnawa-backend/internal/dto/request"
+	"github.com/IKHINtech/sirnawa-backend/internal/dto/response"
 	"github.com/IKHINtech/sirnawa-backend/internal/middleware"
 	"github.com/IKHINtech/sirnawa-backend/internal/services"
 	"github.com/IKHINtech/sirnawa-backend/pkg/utils"
@@ -12,7 +13,6 @@ type BlockHandler interface {
 	Create(ctx *fiber.Ctx) error
 	Update(ctx *fiber.Ctx) error
 	Paginated(ctx *fiber.Ctx) error
-	FindAll(ctx *fiber.Ctx) error
 	FindByID(ctx *fiber.Ctx) error
 	Delete(ctx *fiber.Ctx) error
 }
@@ -88,49 +88,47 @@ func (h *blockHandlerImpl) Update(ctx *fiber.Ctx) error {
 	return r.Created(ctx, res, "Successfully created")
 }
 
-// Get Pagination Block
-// @Summary Get Paginated Block
-// @Descrpiton Get Paginated Block
+// Get Block
+// @Summary Get Block
+// @Descrpiton Get Block
 // @Tags Block
 // @Accept json
 // @Produce json
 // @Security Bearer
+// @Param paginated query boolean false "Paginated"
 // @Param page query int false "Page number"
 // @Param page_size query int false "Page size"
 // @Param order_by query string false "Order by"
 // @Param order query string false "Order"
 // @Success 200 {object} utils.ResponseData
 // @Failure 400 {object} utils.ResponseData
-// @Router /block/paginated [get]
+// @Router /block [get]
 func (h *blockHandlerImpl) Paginated(ctx *fiber.Ctx) error {
 	r := &utils.ResponseHandler{}
 
-	paginate := utils.GetPaginationParams(ctx)
+	isPaginated := ctx.QueryBool("paginated", true)
 
-	meta, data, err := h.services.Paginated(paginate)
-	if err != nil {
-		return r.BadRequest(ctx, []string{"error:" + err.Error()})
+	var meta *utils.Pagination
+	var data *response.BlockResponses
+	var err error
+
+	if isPaginated {
+
+		paginate := utils.GetPaginationParams(ctx)
+
+		meta, data, err = h.services.Paginated(paginate)
+		if err != nil {
+			return r.BadRequest(ctx, []string{"error:" + err.Error()})
+		}
+	} else {
+		res, err := h.services.FindAll()
+		if err != nil {
+			return r.BadRequest(ctx, []string{"error:" + err.Error()})
+		}
+		data = &res
 	}
+
 	return r.Ok(ctx, data, "Successfully get data", meta)
-}
-
-// Get List Block
-// @Summary Get List Block
-// @Descrpiton Get List Block
-// @Tags Block
-// @Accept json
-// @Produce json
-// @Security Bearer
-// @Success 200 {object} utils.ResponseData
-// @Failure 400 {object} utils.ResponseData
-// @Router /block [get]
-func (h *blockHandlerImpl) FindAll(ctx *fiber.Ctx) error {
-	r := &utils.ResponseHandler{}
-	res, err := h.services.FindAll()
-	if err != nil {
-		return r.BadRequest(ctx, []string{"error:" + err.Error()})
-	}
-	return r.Ok(ctx, res, "Successfully get data", nil)
 }
 
 // Find Block By ID
