# internal/routes/block_routes.go
@@ -13,8 +13,7 @@ func BlockRoutes(route fiber.Router) {
 	services := services.NewBlockServices(repository, database.DB)
 	handlers := handlers.NewBlockHandler(services)
 
-	route.Get("/", handlers.FindAll)
-	route.Get("/paginated", handlers.Paginated)
+	route.Get("/", handlers.Paginated)
 	route.Get("/:id", handlers.FindByID)
 	route.Post("/", handlers.Create)
 	route.Delete("/:id", handlers.Delete)
